--- a/styles/global.css
+++ b/styles/global.css
@@ -16,7 +16,7 @@ body {
   --paragraph-medium: 600 0.875rem/24px var(--font-family);
   --paragraph-small: 600 0.75rem/16px var(--font-family);
   --label-large: 700 1rem/24px var(--font-family);
-  --label-medium: 700 0.875/24px var(--font-family);
+  --label-medium: 700 0.875rem/24px var(--font-family);
   --label-small: 700 0.75rem/16px var(--font-family);
   --link: 600 0.75rem/16px var(--font-family);
 
