--- a/styles/modal.css
+++ b/styles/modal.css
@@ -7,7 +7,17 @@
   margin: 50px auto;
   border-radius: 12px;
   background-color: #23242c;
+
   position: relative;
+
+
+}
+
+.modal-container {
+  position: absolute;
+  top: -25px;
+  width: 100%;
+  margin-bottom: 1000px;
 }
 
 #modal h3 {
@@ -169,3 +179,5 @@ input:hover {
 .schedule-button:hover {
   background-color: #bdb4fa;
 }
+
+
